exo: Handle cursor hotspot adjustments correctly.

SetCursor should determine if cursor hotspot changed by looking
at the last set hotspot and not the last captured hotspot.

Bug: 842507
Test: exo_unittests --gtest_filter=PointerTest.SetCursor
Change-Id: I98de185a618adeb440165f372d8127bbc0c4a6f0
Reviewed-on: https://chromium-review.googlesource.com/1056667
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Commit-Queue: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558159}