components/exo/pointer.cc
@@ -134,7 +134,7 @@ void Pointer::SetCursor(Surface* surface, const gfx::Point& hotspot) {
     cursor_changed = true;
   }
 
-  if (hotspot != cursor_hotspot_) {
+  if (hotspot != hotspot_) {
     hotspot_ = hotspot;
     cursor_changed = true;
   }
